--- a/faceb/style.css
+++ b/faceb/style.css
@@ -4,7 +4,7 @@
 }
 body{
     background-color: rgb(213, 224, 235);
-   background-image: url(images/download.jpg);
+   background-image: url(download.jpg);
     background-size: cover;
 
 }
